fix forkvm bug for java 9-15